# ENGRAM

./: .env.example  .gitignore  Cargo.toml  README.md  dev.sh  docker-compose.yml  kill.sh  package.json  plan_001.md  pnpm-lock.yaml
apps/backend/: Cargo.toml
apps/backend/src/: config.rs  error.rs  main.rs
apps/backend/src/db/: mod.rs
apps/backend/src/db/migrations/: 000_migrations_table.sql  001_create_sources.sql  002_create_cards.sql  003_create_reviews.sql
apps/backend/src/llm/: anthropic.rs  gemini.rs  manager.rs  mod.rs  openai.rs  provider.rs
apps/backend/src/models/: card.rs  mod.rs  review.rs  source.rs
apps/backend/src/routes/: cards.rs  ingest.rs  llm.rs  mod.rs  review.rs  ws.rs
apps/backend/src/services/: mod.rs  pdf_processor.rs  spaced_repetition.rs
apps/frontend/: package.json  svelte.config.js  vite.config.ts
apps/frontend/src/: app.html
apps/frontend/src/lib/api/: client.ts  websocket.ts
apps/frontend/src/lib/components/: CardItem.svelte  ReviewCard.svelte  VoiceControls.svelte
apps/frontend/src/lib/db/: index.ts
apps/frontend/src/lib/stores/: cards.ts  review.ts  settings.ts
apps/frontend/src/routes/: +layout.svelte  +page.svelte
apps/frontend/src/routes/cards/: +page.svelte
apps/frontend/src/routes/ingest/: +page.svelte
apps/frontend/src/routes/review/: +page.svelte
apps/frontend/src/routes/settings/: +page.svelte
apps/frontend/static/: audio-processor.worklet.js  manifest.json  offline.html  service-worker.js
apps/voice/: README.md  pyproject.toml  requirements.txt
apps/voice/src/: __init__.py  api_client.py  audio_components.py  config.py  main.py  pipeline.py  prompts.py  session.py  tts_chatterbox.py  tts_fallback.py
docs/MVP/: plan_001--AUDIT-v2.md  plan_001--IMP-ISSUES.md  quick_start-from_0.md  state_001.md  three-review-modes.md
scripts/: add-test-cards.sh  clear-all-cards.sh
